--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang='en'>
-<head>
-  <meta charset="utf-8" />
-  <title>Hello world!</title>
-  <link type="text/css" rel="stylesheet"
-        href="{{ url_for('static',
-              filename='hello.css')}}" />
-</head>
-<body>
+<!-- this tells us it extends the master template-->
+{% extends "master.html" %}
 
+<!-- These blocks are set up  "block [blockname]" and plug into the corresponding blocks in master -->
+{% block title %}Home{% endblock %}
+
+{% block body %}
 It works!
-
-</body>
-</html>
+{% endblock %}
